[build-system]
requires = [
    "setuptools<81",
    "wheel",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes_consultant_helper"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Core dependencies will be read from requirements.txt
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests", "tests.*"]
